Fixing post template on mobile

--- a/_scss/layout.scss
+++ b/_scss/layout.scss
@@ -192,13 +192,14 @@ LAYOUT
   color: $white;
   font-size: 18px;
   font-weight: 300;
+  text-align: center;
 }
 
 .item .post-date {
   display: block;
   text-align: right;
   line-height: 32px;
-    color: #999;
+  color: #999;
 }
 
 
